# musilizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CTestPresets.json  LICENSE  imgui.ini
.github/workflows/: ci.yml
include/: config.hpp
include/controller/: player.hpp  search_controller.hpp
include/model/: audio.hpp  library.hpp  musicDirectory.hpp  music_directory.hpp  persistence.hpp  playHistory.hpp  play_history.hpp  playlist.hpp  queue.hpp  track.hpp
include/repository/: persistence.hpp
include/service/: genre_graph.hpp  genre_graph_learner.hpp  recommender.hpp  search.hpp
include/ui/: library_panel.hpp  main_window.hpp  player_panel.hpp  playlist_panel.hpp
include/utils/: string_utils.hpp
src/: main.cpp
src/controller/: player.cpp  search_controller.cpp
src/model/: audio.cpp  library.cpp  musicDirectory.cpp  music_directory.cpp  persistence.cpp  playHistory.cpp  play_history.cpp  playlist.cpp  queue.cpp
src/repository/: persistence.cpp
src/service/: genre_graph.cpp  genre_graph_learner.cpp  recommender.cpp  search.cpp
src/ui/: library_panel.cpp  main_window.cpp  player_panel.cpp  playlist_panel.cpp
tests/: test_audio.cpp  test_helpers.hpp  test_learner.cpp  test_library.cpp  test_models.cpp  test_music_directory.cpp  test_persistence.cpp  test_play_history.cpp  test_playlist.cpp  test_queue.cpp  test_recommender.cpp  test_search.cpp
